Fix config